--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
 /*  your css code here. If applicable */
+.middle{
+	margin-right: auto;
+	margin-left: auto;
+}
+h1{
+	text-align: center;
+}
+
 td{
 	border: 1px solid black;
 	border-spacing: 1px;
